# NuMaker-mbed-ce-AWS-IoT-example

./: .gitignore  .hgignore  .mbedignore  CMakeLists.txt  MQTT.lib  MyTLSSocket.h  README.md  TLSSocket.h  easy-connect.lib  main.cpp  mbed_app.json  mbed_app.json5  mbed_app_cellular.json5  mbed_app_quectel_bg96.json  mbedtls_user_config.h
MQTT/: CMakeLists.txt  MQTTAsync.h  MQTTClient.h  MQTTmbed.h  README.md
MQTT/FP/: CMakeLists.txt  README.md
MQTT/MQTTPacket/: CMakeLists.txt  README.md
TARGET_NUVOTON/: NetworkInterfaceDefaults.cpp
configs/: awsiot_credentials.c  awsiot_credentials.h  awsiot_user_config.h
drivers/COMPONENT_BME680/: CMakeLists.txt
drivers/COMPONENT_BME680/BME680/: mbed_bme680.cpp  mbed_bme680.h
my-tlssocket/: MyTLSSocket.cpp  MyTLSSocket.h  mbed_lib.json
pre-main/: dispatch_host_command.cpp  fetch_host_command.cpp  mbed_main.cpp  mem_stats.cpp  provision.cpp  pump_host_command.cpp
targets/TARGET_NUVOTON/: NetworkInterfaceDefaults.cpp  platform_entropy.cpp
targets/TARGET_NUVOTON/TARGET_NUMAKER_PFM_M2351/: NuMaker-mbed-TZ-secure-example.hex
targets/TARGET_NUVOTON/TARGET_NU_PFM_M2351_NPSA_NS/: NuMaker-mbed-TZ-secure-example.hex
